========================================================================
quota-1.8 Release Notes                                       2008-04-18
========================================================================

* Fix bug where home directory of /g/g53/user matched mount point of
  /g/g5.  https://chaos.llnl.gov/bugzilla/show_bug.cgi?id=301

========================================================================
quota-1.7 Release Notes                                       2007-10-29
========================================================================

* Rename package to 'rquota' and have it obsolete the Red Hat quota 
  package.

========================================================================
quota-1.5 Release Notes                                       2006-10-06
========================================================================

* Added "-t sec" option which puts an upper limit on the amount of 
  time quota should be allowed to run, useful for login scripts.

* Added -l option to report only on the user's home directory.
  NOTE: this option determines the file system to query by comparing
  the user's home directory listed in the password file to the file 
  system labels in /etc/quota.conf.

* RPM packaging for AIX.