@@ -1,10 +1,0 @@
-Remote rquota client (c) 1995-2008 Jim Garlick <garlick@llnl.gov>
-
-quota.x is copyright (c) Sun Microsystems.  The rest is released under GPL.
-
-See quota.1 and quota.conf.5 for more information on how to configure and run
-quota.
-
-PRIVACY NOTE: quota does not run setuid, and security is enforced on the 
-NFS server side.  Sometimes this means that users can view each others quotas,
-depending on the server.
