@@ -1,4 +1,14 @@
 ========================================================================
+quota-1.9 Release Notes                                       2008-05-03
+========================================================================
+
+* Add support for Lustre quotas.
+
+* Add 'repquota' command.
+
+* General refactoring and cleanup.
+
+========================================================================
 quota-1.8 Release Notes                                       2008-04-18
 ========================================================================
 
